style.css
/* ... */
@media (max-width: 700px) {
  #comics-bar {
    left: 0;
    height: calc(100% - 33px);
    width: 200px;
    border-radius: 0 6px 6px 0;
  }
  #comics-title {
    width: calc(100% - 36px);
    min-height: 32px;
    padding: 4px 4px 0px 4px!important;
  }
  #close-bar {
    margin: 0;
    width: 24px;
    height: 24px;
  }
  #close-bar img {
    width: 16px;
    margin-top: 2px;
  }
  #controls {
    right: 5px;
    top: 5px;
  }
}
@media (max-height: 400px) {
  #search {
    position: fixed;
    bottom: 5px;
    margin-right: 5px;
  }
}
@media (max-height: 600px) {
  .network-choice {
    height: 20px;
  }
  .logo {
    display: none;
  }
  h1 {
    font-size: 18px;
    padding: 5px 0;
  }
  .choices {
    margin: 5px 0 10px 0;
  }
  #credits-small {
    display: block;
  }
  #credits, .asterisk, #title {
    display: none;
  }
  #comics {
    line-height: 18px;
  }
  #comics-list li {
    padding: 2px;
    font-size: 14px;
  }
  #controls {
    width: 136px;
  }
  #sigma-buttons button {
    width: 30px;
    height: 30px;
  }
  #suggestions-select {
    width: 132px;
    height: 28px;
  }
  #loader-list img {
    top: 10px;
  }
}
@media not (pointer: coarse) {
  .desktop-details {
    display: inline;
  }
  .mobiles-details {
    display: none;
  }
}
@media (pointer: coarse) {
  input, textarea, button, select, a, label, div, p {
    -webkit-tap-highlight-color: rgba(0,0,0,0);
  }
  #search input {
    display: none;
  }
  #suggestions-select {
    display: block;
  }
  #comics-cache {
    display: none!important;
  }
  .desktop-details {
    display: none;
  }
  .mobiles-details {
    display: inline;
  }
  #loader-comics {
    position: fixed;
    right: 0;
    display: none;
  }
  #loader-comics img {
    padding: 10px;
    width: 35px;
    height: 35px;
  }
}
@media (pointer: coarse) and (max-height: 600px) and (max-width: 700px) {
  #loader-comics {
    left: 253px;
    right: unset;
  }
}
#rotate-modal {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 20;
  background-color: rgba(0, 0, 0, 0.85);
  text-align: center;
}
#rotate-modal h1 {
  font-size: 30px;
  padding: 10px;
}
#rotate-modal-img {
  position: relative;
  top: 25%;
  left: 0;
  min-width: 25%;
  max-width: 45%;
}
#rotate-modal p {
  display: block;
  position: relative;
  top: 25%;
  left: 25%;
  width: 50%;
  background-color: var(--marvel-red);
  color: white;
  font-size: 20px;
  font-family: monospace;
  text-transform: uppercase;
  font-weight: bold;
  padding: 15px 0px;
}
#rotate-modal p small {
  font-size: 14px;
  text-transform: lowercase;
  padding: 15px 5px 5px 5px;
  display: inline-block;
  line-height: 20px;
}
@media (orientation: landscape) {
  #rotate-modal {
    z-index: -1;
    opacity: 0;
    -webkit-transition: 0.5s linear;
    -moz-transition: 0.5s linear;
    -o-transition: 0.5s linear;
    transition: 0.5s linear;
  }
}
@media (orientation: landscape) and (max-height: 600px) {
  #modal-img {
    max-height: calc(100% - 15px);
    max-width: calc(100% - 15px);
    margin: 0;
  }
  #modal-actions {
    height: 100%;
  }
  #modal .action-button {
    position: absolute;
    margin: 5px;
  }
  #modal-previous {
    top: calc(50% - 17px);
    left: 0;
  }
  #modal-next {
    top: calc(50% - 17px);
    right: 0;
  }
  #modal-play, #modal-pause {
    bottom: calc(100% - 45px);
    left: 0;
  }
}
@media (orientation: portrait) {
  #rotate-modal {
    opacity: 1;
    -webkit-transition: 0.1s linear;
    -moz-transition: 0.1s linear;
    -o-transition: 0.1s linear;
    transition: 0.1s linear;
  }
  .logo {
    display: block;
    padding: 5px;
    height: 44px;
  }
  #sidebar, #controls, #comics-bar {
    display: none!important;
  }
  #loader {
    top: 20%;
    left: calc(50% - 25px);
  }
}
@media (orientation: portrait) and (min-height: 1000px) {
  #rotate-modal p {
    font-size: 24px;
  }
  #rotate-modal p small {
    display: none;
  }
}

